# agentledger

./: .gitignore  LICENSE  README.md  agentledger-protocol-v0.1-rev2.md  context.md  draft-dembowski-agentledger-proof-of-behavior-00.md  pyproject.toml
agentledger/: __init__.py  cli.py  interfaces.py  policies.py
agentledger/bindings/: __init__.py  ethereum.py  x509.py
agentledger/cli/: __init__.py  inspect.py  verify.py
agentledger/core/: __init__.py  chain.py  identity.py  receipt.py
agentledger/dashboard/: __init__.py  api.py  reader.py  serve.py
agentledger/dashboard/static/: style.css
agentledger/dashboard/templates/: agent_detail.html  agents.html  layout.html  receipt_detail.html  timeline.html
agentledger/dashboard/templates/pages/: agents.html
agentledger/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
examples/: demo.py
tests/: conftest.py  test_autogen.py  test_bindings_ethereum.py  test_bindings_x509.py  test_chain.py  test_cli_coverage.py  test_cli_verify.py  test_crewai.py  test_cross_agent.py  test_dashboard_reader.py  test_e2e.py  test_identity.py  test_interop_vectors.py  test_langchain.py  test_langchain_chat.py  test_policy.py  test_receipt.py  test_security_fixes.py
