[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentledger"
version = "0.1.0"
description = "Tamper-evident audit trail and cryptographic identity for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "audit", "compliance", "langchain", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cryptography>=42.0",
    "jcs>=0.2",
]

[project.optional-dependencies]
ethereum = [
    "web3>=6.0",
    "eth-account>=0.10",
]
langchain = [
    "langchain>=0.2",
]
dashboard = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
]
all = [
    "agentledger[ethereum,langchain,dashboard]",
]

[project.scripts]
agentledger = "agentledger.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentledger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.coverage.run]
source = ["agentledger"]
omit = ["tests/*"]
